--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SMPNEGERI9TEGAL">
-        <activity android:name=".VisiActivity"></activity>
+        <activity android:name=".StaffActivity"></activity>
+        <activity android:name=".MenuguruActivity" />
+        <activity android:name=".PramukaActivity" />
+        <activity android:name=".PmrActivity" />
+        <activity android:name=".SilatActivity" />
+        <activity android:name=".KarateActivity" />
+        <activity android:name=".SepakbolaActivity" />
+        <activity android:name=".HadrohActivity" />
+        <activity android:name=".LainlainActivity" />
+        <activity android:name=".KesenianActivity" />
+        <activity android:name=".UpacaraActivity" />
+        <activity android:name=".HydroponicActivity" />
+        <activity android:name=".SenamActivity" />
+        <activity android:name=".GreenschoolActivity" />
+        <activity android:name=".VisiActivity" />
         <activity android:name=".FasilitasActivity" />
         <activity android:name=".PrestasiActivity" />
         <activity android:name=".EkstrakulikulerActivity" />
