--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    implementation 'com.zolad:zoominimageview:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
